# suave-alloy

./: Cargo.toml  README.md
crates/network/: Cargo.toml
crates/network/src/: contract.rs  lib.rs  network.rs  provider.rs  signer.rs
crates/suave-alloy/: Cargo.toml
crates/suave-alloy/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: crecord.rs  crequest.rs  cresponse.rs
examples/: Cargo.toml  callbuilder_ccr.rs  submit_ccr.rs
src/: ccr.rs  lib.rs  main.rs
src/ccr/: crecord.rs  crequest.rs  cresponse.rs  mod.rs
src/network/: mod.rs  network.rs  provider.rs  signer.rs
