[workspace]
members = [
    "crates/*",
    "examples/",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
license = "GPL-3.0"
exclude = [ "examples/" ]

[workspace.dependencies]
suave-alloy-network = { path = "crates/network" }
suave-alloy-types = { path = "crates/types" }
suave-alloy = { path = "crates/suave-alloy" }

alloy = { git = "https://github.com/alloy-rs/alloy", rev = "e7542d7", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde"
] }
alloy-rlp = { version = "0.3.4", features = ["derive"] }
async-trait = "0.1.79"
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[patch."https://github.com/alloy-rs/alloy"]
alloy = { git = "https://github.com/halo3mic/alloy", branch = "sendabletx_exposed", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
    "consensus",
    "eips",
    "serde"
] }