[package]
name = "examples"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suave-alloy = { path = "../crates/suave-alloy" }

alloy.workspace = true
tokio.workspace = true
eyre.workspace = true

[[example]]
name = "submit_ccr"
path = "submit_ccr.rs"

[[example]]
name = "callbuilder_ccr"
path = "callbuilder_ccr.rs"