[package]
name = "suave-alloy-network"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suave-alloy-types = { workspace = true, default-features = false }

alloy.workspace = true
reqwest = "0.12.3"
url = "2.2.2"
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
eyre.workspace = true
