[package]
name = "suave-alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suave-alloy-types = { workspace = true }
suave-alloy-network = { workspace = true, optional = true }

[features]
default = ["network"]
network = ["suave-alloy-network"]
