[package]
name = "suave-alloy-types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true


[dev-dependencies]
tokio.workspace = true